优化书签处理
